[gd_scene load_steps=10 format=3 uid="uid://4mkudobfj4kg"]

[ext_resource type="Script" uid="uid://cfwagdps7dk6v" path="res://Scripts/character_menu.gd" id="1_8phyh"]
[ext_resource type="Theme" uid="uid://bxgqt7bk4a0aj" path="res://assets/Themes/menus_themes.tres" id="1_kjf6d"]
[ext_resource type="Texture2D" uid="uid://sbngs3trswvm" path="res://assets/CharacterMenu.png" id="1_n6mxt"]
[ext_resource type="Texture2D" uid="uid://csxsguvl4bhwx" path="res://assets/Character_new.png" id="2_k8yv0"]
[ext_resource type="Texture2D" uid="uid://cu6sf6x8jg3ha" path="res://assets/HealthBarEmpty.png" id="3_sodv5"]
[ext_resource type="Texture2D" uid="uid://dcypxhrgsbsw2" path="res://assets/full_health.png" id="4_8phyh"]
[ext_resource type="Texture2D" uid="uid://dl4i0s68y70yb" path="res://assets/Button.png" id="7_ksvx3"]
[ext_resource type="Texture2D" uid="uid://dxshqy6e6o8cc" path="res://assets/inventory_slot.png" id="8_j2hbr"]

[sub_resource type="Theme" id="Theme_ydfa3"]
GridContainer/constants/h_separation = 2
GridContainer/constants/v_separation = 2

[node name="CharacterMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kjf6d")
script = ExtResource("1_8phyh")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_n6mxt")
expand_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(286, 238)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_k8yv0")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 17.000002
offset_top = 331.0
offset_right = 708.0
offset_bottom = 692.0
scale = Vector2(0.8, 0.8)
texture_under = ExtResource("3_sodv5")
texture_progress = ExtResource("4_8phyh")

[node name="healthtext" type="Label" parent="TextureProgressBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 5.75
offset_top = -10.500015
offset_right = 57.75
offset_bottom = 12.499985
grow_horizontal = 2
grow_vertical = 2

[node name="Level" type="Label" parent="."]
layout_mode = 0
offset_left = 265.0
offset_top = 380.0
offset_right = 337.0
offset_bottom = 404.0

[node name="Inventory_button" type="TextureButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 0
offset_left = 815.0
offset_top = 113.0
offset_right = 1015.0
offset_bottom = 163.0
focus_mode = 0
texture_normal = ExtResource("7_ksvx3")
texture_pressed = ExtResource("7_ksvx3")
texture_hover = ExtResource("7_ksvx3")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Inventory_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Inventory"

[node name="Attribute_button" type="TextureButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 0
offset_left = 616.0
offset_top = 113.0
offset_right = 616.0
offset_bottom = 113.0
focus_mode = 0
texture_normal = ExtResource("7_ksvx3")
texture_pressed = ExtResource("7_ksvx3")
texture_hover = ExtResource("7_ksvx3")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Attribute_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Attribute"

[node name="Inventory_menu" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 637.0
offset_top = 186.0
offset_right = 1012.0
offset_bottom = 480.0

[node name="GridContainer" type="GridContainer" parent="Inventory_menu"]
layout_mode = 2
theme = SubResource("Theme_ydfa3")
columns = 5

[node name="Slot" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot2" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot2"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot3" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot3"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot3"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot4" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot4"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot4"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot5" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot5"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot5"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot6" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot6"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot6"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot7" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot7"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot7"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot8" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot8"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot8"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot9" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot9"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot9"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot10" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot10"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot10"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot11" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot11"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot11"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot12" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot12"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot12"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot13" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot13"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot13"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot14" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot14"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot14"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot15" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot15"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot15"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot16" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot16"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot16"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot17" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot17"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot17"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot18" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot18"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot18"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot19" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot19"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot19"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Slot20" type="TextureButton" parent="Inventory_menu/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture_normal = ExtResource("8_j2hbr")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="Inventory_menu/GridContainer/Slot20"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Inventory_menu/GridContainer/Slot20"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 2

[node name="Gold" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 750.0
offset_top = 485.0
offset_right = 894.0
offset_bottom = 526.0
theme_override_font_sizes/font_size = 50
text = "Gold:"
